# trying-leptos

./: .gitignore  Cargo.toml  index.html  readme.md
src/: main.rs
src/Routes/: mod.rs
src/app/: mod.rs
styles/: header.css
