[package]
name = "trying-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.0", features = ["csr"] }
#leptos = { git = "https://github.com/janpauldahlke/leptos.git", branch = "main", features = [
#  "csr",

leptos_router = { version = "0.4.0", features = ["csr"] }
